--- a/translation/00_前言.md
+++ b/translation/00_前言.md
@@ -1,8 +1,8 @@
 # 前  言
 
-*Computing Fundamentals with C++, 3rd Edition*是一部用C++编程语言为计算机系学生讲解首门课程的教材，它的主要适用人群是没有任何编程经验，以及有使用其他编程语言经验的学生。
+《计算基础-C++描述》（第3版）是一部用C++编程语言为计算机系学生讲解首门课程的教材，它的主要适用人群是没有任何编程经验，以及有使用其他编程语言经验的学生。
 
-*Computing Fundamentals with C++, 3rd Edition*致力于利用面向对象编程的相关性和有效性来介绍计算基础概念。这本书中汇聚了我们数十年来的教学经验，它知道如何才能最大限度地帮助学生学习他们在计算机系上的首门课程，如何将对象与类的关系解释得最恰到好处，以及如何为学生的下一门课程打下最坚实的基础。
+《计算基础-C++描述》（第3版）致力于利用面向对象编程的相关性和有效性来介绍计算基础概念。这本书中汇聚了我们数十年来的教学经验，它知道如何才能最大限度地帮助学生学习他们在计算机系上的首门课程，如何将对象与类的关系解释得最恰到好处，以及如何为学生的下一门课程打下最坚实的基础。
 
 ## 本书特色
 
@@ -50,41 +50,41 @@
 
 ## 审阅者名录
 
-Reviewers spend many hours poring over material with critical eyes and useful comments. Because of the high quality of their work, criticisms and recommendations were always considered seriously. I thank the reviewers of this and previous editions.
+由于本书的审阅者们不辞辛劳、仔细而严格地研读，我们得到了不少富有价值的批评和建议。当然，我也逐一对这些批评和建议做了认真地思考。在此，我要再次感谢本书所有审阅者对于这一版本和之前所有版本所做的无私奉献。
 
 |                    |                                              |
 |--------------------|----------------------------------------------|
-| Kristin Roberts    |  *Grand Rapids Community College*            |
-| Rich Pattis        |  *UC Irvine*                                 |
-| Michael Berman     |  *Rowan University*                          |
-| Seth Bergman       |  *Rowan University*                          |
-| Robert Duvall      |  *Duke University*                           |
-| Tom Bricker        |  *University of Wisconsin, Madison*          |
-| David Teague       |  *Western Carolina University*               |
-| Ed Epp             |  *University of Portland*                    |
-| James Murphy       |  *California State University, Chico*        |
-| Jerry Weltman      |  *Louisiana State University, Baton Rouge*   |
-| John Miller        |  *St. John’s University*                     |
-| Stephen Leach      |  *Florida State University*                  |
-| Alva Th ompson     |  *University of South Florida*               |
-| Norman Jacobson    |  *University of California, Irvine*          |
-| David Levine       |  *Gettysburg College*                        |
-| H. E. Dunsmore     |  *Purdue University*                         |
-| Howard Pyron       |  *University of Missouri at Rolla*           |
-| Lee Cornell        |  *Mankato State University*                  |
-| Eugene Wallingford |  *University of Northern Iowa*               |
-| David Teague       |  *Western Carolina University*               |
-| Clayton Lewis      |  *University of Colorado*                    |
-| Tim Budd           |  *Oregon State University*                   |
-| Jim Miller         |  *University of Kansas*                      |
-| Art Farley         |  *University of Oregon*                      |
-| Richard Enbody     |  *Michigan State University*                 |
-| Van Howbert        |  *Colorado State University*                 |
-| Joe Burgin         |  *Texas Tech University*                     |
-| Jim Coplien        |  *Bell Labs*                                 |
-| Dick Weide         |  *Ohio State University*                     |
-| Gene Norris        |  *George Mason University*                   |
+| Kristin Roberts    |  *大急流城社区学院*                             |
+| Rich Pattis        |  *加州大学欧文分校*                             |
+| Michael Berman     |  *罗文大学*                                    |
+| Seth Bergman       |  *罗文大学*                                    |
+| Robert Duvall      |  *杜克大学*                                    |
+| Tom Bricker        |  *威斯康星大学麦迪逊分校*                        |
+| David Teague       |  *西卡罗来纳大学*                               |
+| Ed Epp             |  *波特兰大学*                                  |
+| James Murphy       |  *加州大学奇科分校*                             |
+| Jerry Weltman      |  *路易斯安那州立大学，巴吞鲁日分校*                |
+| John Miller        |  *圣约翰大学*                                  |
+| Stephen Leach      |  *佛罗里达州立大学*                             |
+| Alva Th ompson     |  *南佛罗里达大学*                              |
+| Norman Jacobson    |  *加州大学尔湾分校*                             |
+| David Levine       |  *葛底斯堡学院*                                |
+| H. E. Dunsmore     |  *普渡大学*                                   |
+| Howard Pyron       |  *密苏里大学罗拉分校*                           |
+| Lee Cornell        |  *曼凯托州立大学*                              |
+| Eugene Wallingford |  *北爱荷华大学*                                |
+| David Teague       |  *西卡罗来纳大学*                              |
+| Clayton Lewis      |  *科罗拉多大学*                                |
+| Tim Budd           |  *俄勒冈州立大学*                              |
+| Jim Miller         |  *堪萨斯大学*                                  |
+| Art Farley         |  *俄勒冈大学*                                  |
+| Richard Enbody     |  *密歇根州立大学*                              |
+| Van Howbert        |  *科罗拉多州立大学*                            |
+| Joe Burgin         |  *德州理工大学*                               |
+| Jim Coplien        |  *贝尔实验室*                                 |
+| Dick Weide         |  *俄亥俄州立大学*                              |
+| Gene Norris        |  *乔治梅森大学*                               |
 
 ## 特别鸣谢
 
-I would like to thank super-reviewer Kristin Roberts from Grand Rapids Community College. Not only did she provide tremendous feedback, Kristin encouraged me to complete this third edition. Th ere have been several major changes, some reorganization of chapters, many refinements, some updates, and many new programming projects. This textbook is now current, in large part because of Kristin.
+我在这里要特别感谢一下来自大急流域社区学院的Kristin Roberts。作为这本书的超级审阅者，她不仅书稿提供了大量的反馈，还一直不断地鼓励我坚持完成本书的第三版。这是本书的一次重大更新，一些章节得到了重组，其中改进并增加了许多新的编程项目，总之，这本书现在可以说是焕然一新了。这一切很大程度上都要归功于Kristin。
