--- a/translation/01_第一章.md
+++ b/translation/01_第一章.md
@@ -10,6 +10,8 @@ We begin with a need for a computer-based solution to a problem. The need may be
 * the relationship between a class and its many objects that objects have a name, state, and set of operations
 * the categories of errors that occur during the implementation phase of software development
 
+******
+
 ## 1.1 PROBLEM SOLVING
 
 There are many approaches to problem solving. Th is chapter begins by examining a strategy with these three steps: analysis, design, and implementation.
@@ -58,6 +60,8 @@ In summary, problems can be analyzed by:
 
 Textbook problems sometimes provide the variable names and types of values such as strings, integers, or numbers with a decimal point that must be input and output. If not, they are relatively easy to recognize. In real-world problems of signifi cant scale, a great deal of effort is expended in the analysis stage.
 
+*****
+
 **SELF-CHECK**
 
 1-1. Given the problem of converting British pounds to U.S. dollars, provide a meaningful name for a variable to store the value that must  be input by the user. Also give a meaningful name for the variable to store a value that is to be output.
@@ -66,7 +70,8 @@ Textbook problems sometimes provide the variable names and types of values such 
 
 **An Example of Analysis**
 
-*Problem:* Using the grade assessment scale to the right, compute a course grade as a weighted average of projects, a midterm, and one final exam. 
+*Problem:* Using the grade assessment scale to the right, compute a course grade as a weighted average of projects, a midterm, and one final exam.
+
 |**Item**   |**Weight**|
 |-----------|----------|
 |Projects   |50%       |
@@ -99,6 +104,8 @@ The problem has now been analyzed, the input and output variables have been iden
 |    | nalExam | Input  | 84.0    |
 |    | courseGrade | Output  | 78.0  |
 
+*****
+
 **SELF-CHECK**
 
 1-3. Complete an analysis for the following problem. You will need a calculator to determine output.
@@ -124,6 +131,8 @@ Consider an algorithm to bake a cake taken from directions for carrot cake:
 * Cake is done when toothpick inserted in center comes out clean.
 
 If the order of the steps is changed, the cook might get a very hot cake pan with raw cake batter in it. If one of these steps is omitted, the cook probably won’t get a baked cake—or there might be a fi re. An experienced cook may not need such an algorithm. However, cake-mix marketers cannot and do not presume that their customers have this experience. Good algorithms list the proper steps in the proper order and are detailed enough to accomplish the task.
+
+*****
 
 **SELF-CHECK**
 
@@ -168,6 +177,8 @@ average = (n1 + n2 + n3) / 3.0;
 cout << "Average = " << average;
 ```
 
+*****
+
 This algorithmic pattern is the first of several. In subsequent chapters, you’ll see other algorithmic patterns such as Guarded Action, Alternative Action, and Indeterminate Loop. To use an algorithmic pattern eff ectively, you should first become familiar with it. Register this Input/Process/Output algorithmic pattern and look for this pattern while developing programs. Th is allows you to design programs more easily. For example, if you discover you have no meaningful values for the input data, it may be that you have placed the process step *before* the input step. Or you may have skipped the input step altogether.
 
 Patterns help solve other kinds of problems. Consider this quote from Christopher Alexander’s book, *A Pattern Language* \[Alexander 77\]: 
@@ -184,6 +195,8 @@ The Input/Process/Output pattern guides the design of the algorithm that relates
 | 1. Input <br>  2. Process <br> 3. Output | 1. Read in projects, midterm, and nalExam <br> 2. Compute courseGrade <br> 3. Display courseGrade |
 
 Although algorithm development is usually an iterative process, a pattern provides an outline of the activities necessary to solve this problem.
+
+*****
 
 **SELF-CHECK**
 
@@ -299,6 +312,8 @@ Testing with several test cases helps avoid the misconception that a program is 
 
 However, even exhaustive testing does not prove a program is correct. E. W. Dijkstra has argued that testing only reveals the presence of errors, not the absence of errors. Even with correct program output, the program is not proven correct. Testing reduces errors and increases confidence that the program works correctly.
 
+*****
+
 **SELF-CHECK**
 
 1-9. If the programmer predicts courseGrade should be 100.0 when all three inputs are 100.0 and the program displays courseGrade as 75.0, what is wrong: the predicted output, the program, or both?
@@ -309,263 +324,129 @@ However, even exhaustive testing does not prove a program is correct. E. W. Dijk
 
 ## 1.2 OBJECTS, TYPES, AND VARIABLES
 
-> To input something that can be used by a program, there must be a
-> place to store it in the memory of the computer. Bjarne Stroustrup,
-> the creator of C++, writes
->
-> We call such a “place” an object. An object is a region of memory with
-> a type that specifi es what kind of information can be placed in it. A
-> named object is called a variable. For example, character strings are
-> put into string variables and integers are put into int variables. You
-> can think of an object as a “box” into which you can put a value of
-> the object’s type.
->
-> For example, the int type used in the previous program stores whole
-> numbers, or integers. Some operations on int variables include
-> addition, subtraction, multiplication, and division. Note that C++
-> uses \* for the multiplication operator (using x would be confusing).
->
-> double courseGrade = 0.5\*projects + 0.2\*midterm + 0.5\* nalExam;
->
-> Th e oat and double types (double is twice the size of a oat) store
-> numeric values with a fractional part. Th e C++ string type stores
-> character sequences as "Firstname I. Lastname" along with an integer
-> to maintain the number of characters in that string.
->
-> *Objects* are entities stored in computer memory. An object is
-> understood by the types of values the object stores—its
-> *attributes*—and the operations that can be applied to that object—its
-> *behavior* \[Booch\]. Every object has
->
-> a name to store and retrieve the values of that object
->
-> values stored in computer memory, which is known as the object’s state
->
-> a set of operations such as addition, input, output, assignment
->
-> Th ese three characteristics of objects—name, state, and
-> operations—were all illustrated in the course grade program. It used
-> three numeric objects stored as projects, midterm, and nalExam that
-> were read in from the keyboard. Each of these objects is capable of
-> storing the value of an integer such as 79 or 90. Th ese objects,
-> along with available operations such as input, multiplication, and
-> addition, computed the courseGrade. An assignment operation was used
-> to store it as a numeric object. An output operation with cout
-> &lt;&lt; was used so the user could see the results of the processing.
->
-> Characteristics of Objects in the First Program
->
-> Name: Each of the four numeric objects has its own identity because
-> each has its own name. Th e fi rst of the four numeric objects was
-> stored as the variable named projects.
->
-> State: Th e value of projects was set with an input operation using
-> cin &gt;&gt;. Th e state of courseGrade was defi ned with an
-> assignment operation using the = operator.
->
-> Th e state of courseGrade was retrieved during output with cout.
->
-> Operations: Other operations available for the int objects included
-> addition (+) and multiplication (\*).
->
-> C++ has fundamental types and compound types. Th e *fundamental* types
-> store one value that corresponds directly to hardware with a fixed
-> size. Th e type determines what values can be stored into that object
-> and what operations can be performed. With numeric types such as int
-> and double, the number of bytes, which varies for diff erent
-> computers, determines the range of values that can be stored in it.
+To input something that can be used by a program, there must be a place to store it in the memory of the computer. Bjarne Stroustrup, the creator of C++, writes
+> We call such a “place” an object. An object is a region of memory with type that specifi es what kind of information can be placed in it. A named object is called a variable. For example, character strings are put into string variables and integers are put into int variables. You can think of an object as a “box” into which you can put a value of the object’s type.
 
-  > **Data Type**                        **Typical Range of Values (varies)**
-  ------------------ ------------------- --------------------------------------
-  > short            2 bytes (16 bits)   -32768 to 32767
-  > unsigned short   2 bytes             0 to 65,535
-  > int              4 bytes             -2147483648 to 2147483647
-  > unsigned int     4 bytes             0 to 4294967295
-  > unsigned long    8 bytes             0 to 18446744073709551615
-  > fl oat           4 bytes             3.4E +/- 38 (7 digits)
-  > double           8 bytes             1.7E +/- 308 (15 digits)
-  > char             1 byte              0 to 255
-  > bool             1 byte              true or false
+For example, the int type used in the previous program stores whole numbers, or integers. Some operations on int variables include addition, subtraction, multiplication, and division. Note that C++ uses \* for the multiplication operator (using x would be confusing).
+> double courseGrade = 0.5\*projects + 0.2\*midterm + 0.5\* finalExam;
 
-> A *compound* type is a type that is defi ned in terms of another type.
-> C++ has these compound types presented in this textbook: references,
-> functions, classes, arrays, and pointers. For example, string is a
-> reference type made up of characters and other data. It has operations
-> to fi nd the length of the sequence of characters and another
-> operation to create a substring from a string given the starting and
-> ending indexes (there are many more operations that will be explored
-> in a later chapter):
->
-> string aString = "A sequence of characters"; // Output: cout &lt;&lt;
-> aString.length() &lt;&lt; endl; // 24 cout &lt;&lt; aString.substr(2,
-> 8) &lt;&lt; endl; // sequence Chapter Summary
+The oat and double types (double is twice the size of a oat) store numeric values with a fractional part. The C++ string type stores character sequences as "Firstname I. Lastname" along with an integer to maintain the number of characters in that string.
 
-In addition to the string type, two other reference types are used
-immediately. Th e istream type object named cin has operations to read
-from an input source such as the keyboard or a fi le on disk. Th e
-ostream type object named cout helps generate output.
+*Objects* are entities stored in computer memory. An object is understood by the types of values the object stores—its *attributes*—and the operations that can be applied to that object—its *behavior* \[Booch\]. Every object has
 
-SELF-CHECK
+* a name to store and retrieve the values of that object
+* values stored in computer memory, which is known as the object’s state
+* a set of operations such as addition, input, output, assignment
 
-> 1-12 Describe the values stored in objects of type double.
->
-> 1-13 Name two operations for double objects.
->
-> 1-14 Describe the values stored in objects of the int type.
->
-> 1-15 Name two operations for int objects.
->
-> 1-16 Describe the values stored in string objects.
->
-> 1-17 Which of the types above store precisely one value?
+These three characteristics of objects—name, state, and operations—were all illustrated in the course grade program. It used three numeric objects stored as projects, midterm, and finalExam that were read in from the keyboard. Each of these objects is capable of storing the value of an integer such as 79 or 90. Th ese objects, along with available operations such as input, multiplication, and addition, computed the courseGrade. An assignment operation was used to store it as a numeric object. An output operation with cout << was used so the user could see the results of the processing.
 
-CHAPTER SUMMARY
+**Characteristics of Objects in the First Program**
 
-> Th is chapter presented a three-step problem-solving strategy of
-> analysis, design, and implementation. Th e table below shows some of
-> the activities performed during each of these three phases. Th e
-> maintenance phase has been added to show how the three steps fi t into
-> the complete program life cycle. Th e maintenance phase actually
-> requires the majority of the time, energy, and money of the program’s
-> life cycle.
+|     |      |
+|-----|------|
+| Name: | Each of the four numeric objects has its own identity because each has its own name. The first of the four numeric objects was stored as the variable named projects. |
+| State: | The value of projects was set with an input operation using cin >> The state of courseGrade was defi ned with an assignment operation using the = operator. The state of courseGrade was retrieved during output with cout. |
+| Operations: | Other operations available for the int objects included addition (+) and multiplication (\*). |
 
-  ----------------------------------------------------------------------------------
-  > **Phase **       **Activities You Might Perform **
-  ------------------ ---------------------------------------------------------------
-  Analysis           Read and understand the problem statement.
-                     
-                     Determine the input and output objects.
-                     
-                     Solve a few sample problems.
+C++ has fundamental types and compound types. Th e *fundamental* types store one value that corresponds directly to hardware with a fixed size. The type determines what values can be stored into that object and what operations can be performed. With numeric types such as int and double, the number of bytes, which varies for different computers, determines the range of values that can be stored in it.
 
-  Design             Look for patterns to guide algorithm development.
-                     
-                     Write an algorithm—steps needed to solve the problem.
-                     
-                     Refi ne the steps in the algorithm and walk through it.
+| **Data Type** | **size** | **Typical Range of Values (varies)** |
+|---------------|----------|--------------------------------------|
+| short         | 2 bytes (16 bits) |  -32768 to 32767            |
+| unsigned short |  2 bytes  |         0 to 65,535                |
+| int            |  4 bytes  |         -2147483648 to 2147483647  |
+| unsigned int   |  4 bytes  |         0 to 4294967295            |
+| unsigned long  |  8 bytes  |         0 to 18446744073709551615  |
+| float          |  4 bytes  |         3.4E +/- 38 (7 digits)     |
+| double         |  8 bytes  |         1.7E +/- 308 (15 digits)   |
+| char           |  1 byte   |         0 to 255                   |
+| bool           |  1 byte   |         true or false              |
 
-  > Implementation   Translate the design into a programming language. Fix errors.
-                     
-                     Create an executable program.
-                     
-                     Test the program.
+A *compound* type is a type that is defi ned in terms of another type. C++ has these compound types presented in this textbook: references, functions, classes, arrays, and pointers. For example, string is a reference type made up of characters and other data. It has operations to find the length of the sequence of characters and another operation to create a substring from a string given the starting and ending indexes (there are many more operations that will be explored in a later chapter):
 
-  > Maintenance      Update the program to keep up with a changing world.
-                     
-                     Enhance it.
-                     
-                     Correct bugs as they are found.
-  ----------------------------------------------------------------------------------
+```C++
+string aString = "A sequence of characters"; // Output: 
+cout << aString.length() << endl;            // 24 
+cout << aString.substr(2, 8) << endl;        // sequence 
+```
 
-> Some analysis and design tools were introduced:
+In addition to the string type, two other reference types are used immediately. Th e istream type object named cin has operations to read from an input source such as the keyboard or a fi le on disk. The ostream type object named cout helps generate output.
 
-naming the objects that help solve a problem
+**SELF-CHECK**
 
-developing algorithms
+1-12. Describe the values stored in objects of type double.
 
-refi ning one or more steps of an algorithm
+1-13. Name two operations for double objects.
 
-using the Input/Process/Output pattern
+1-14. Describe the values stored in objects of the int type.
 
-> Th e sample program we presented previews the details to be discussed
-> in the next chapter.
->
-> C++ types were previewed: fundamental and compound.
->
-> Testing is important, but it does not prove the absence of errors.
-> Testing can and does detect errors, but it can only build confi dence
-> that the program appears to work.
+1-15. Name two operations for int objects.
 
-EXERCISES
+1-16. Describe the values stored in string objects.
 
-1.  What activities can be performed when analyzing problems?
+1-17. Which of the types above store precisely one value?
 
-2.  What are the characteristics of a good algorithm?
+## CHAPTER SUMMARY
 
-3.  What is the diff erence between objects used to store output values
-    > and objects that store the values input by the user?
+This chapter presented a three-step problem-solving strategy of analysis, design, and implementation. The table below shows some of the activities performed during each of these three phases. The maintenance phase has been added to show how the three steps fit into the complete program life cycle. Th e maintenance phase actually requires the majority of the time, energy, and money of the program’s life cycle.
 
-4.  List the three characteristics of objects.
+| **Phase** | **Activities You Might Perform** |
+|-----------|----------------------------------|
+| Analysis  | Read and understand the problem statement. <br> Determine the input and output objects. <br> Solve a few sample problems.|
+| Design    | Look for patterns to guide algorithm development.<br>  Write an algorithm—steps needed to solve the problem.<br>  Refine the steps in the algorithm and walk through it. |
+| Implementation | Translate the design into a programming language.<br>  Fix errors.<br>  Create an executable program.<br> Test the program. |
+| Maintenance | Update the program to keep up with a changing world.<br> Enhance it.<br> Correct bugs as they are found. |
 
-5.  What activities can be performed when designing programs?
+* Some analysis and design tools were introduced:
+    * naming the objects that help solve a problem
+    * developing algorithms
+    * refining one or more steps of an algorithm
+    * using the Input/Process/Output pattern
 
-6.  What is one “deliverable” of design?
+* The sample program we presented previews the details to be discussed in the next chapter. C++ types were previewed: fundamental and compound.
 
-7.  What type of object would you use to store the number of students
-    > registered in a course?
+* Testing is important, but it does not prove the absence of errors. Testing can and does detect errors, but it can only build confi dence that the program appears to work.
 
-8.  What type of object would you use to store π?
+## EXERCISES
 
-9.  What type of object would you use to store the words of a
-    > Shakespeare play?
-
-10. What is the deliverable from the implementation phase of program
-    > development?
-
+1. What activities can be performed when analyzing problems?
+2. What are the characteristics of a good algorithm?
+3. What is the diff erence between objects used to store output values and objects that store the values input by the user?
+4. List the three characteristics of objects.
+5. What activities can be performed when designing programs?
+6. What is one “deliverable” of design?
+7. What type of object would you use to store the number of students registered in a course?
+8. What type of object would you use to store π?
+9. What type of object would you use to store the words of a Shakespeare play?
+10. What is the deliverable from the implementation phase of program development?
 11. Does a program that runs work correctly? Justify your answer.
-
 12. Write an algorithm that describes how to get to where you live.
+13. Write an algorithm for fi nding any phone number in the phone book. Will the search always be successful?
+14. Write an algorithm that instructs someone to arrive at your home on foot.
+15. Obtain the instructions necessary to create, compile, link, and execute a C++ program on your system. You may need to seek out a login procedure and/or basic editing commands and compiling commands. After this, write a complete algorithm that provides all necessary steps to successfully guide a novice to complete a program through testing. Your algorithm may contain steps such as “Compare example output to program output,” “Create a new file,” and “Compile the program.”
 
-13. Write an algorithm for fi nding any phone number in the phone book.
-    > Will the search always be successful?
+## PROBLEM SOLVING: WRITING ALGORITHMS
 
-14. Write an algorithm that instructs someone to arrive at your home
-    > on foot.
+### 1A SIMPLE AVERAGE
 
-15. Obtain the instructions necessary to create, compile, link, and
-    > execute a C++ program on your system. You may need to seek out a
-    > login procedure and/or basic editing commands and
-    > compiling commands. After this, write a complete algorithm that
-    > provides all necessary steps to successfully guide a novice to
-    > complete a program through testing. Your
+Write an algorithm that will compute the average of three test scores of equal weight.
 
-Problem Solving: Writing Algorithms
+### 1B WEIGHTED AVERAGE
 
-> algorithm may contain steps such as “Compare example output to program
-> output,”
->
-> “Create a new fi le,” and “Compile the program.”
+Write an algorithm that will compute the course grade using this weighted scale:
 
-**PROBLEM SOLVING: WRITING ALGORITHMS**
+| *Assessment* | *Weight* |
+|--------------|----------|
+| Quiz average | 20%      |
+| Midterm      | 20%      |
+| Lab grade    | 35%      |
+| Final exam   | 25%      |
 
-**1A SIMPLE AVERAGE**
+### 1C WHOLESALE COST
 
-> Write an algorithm that will compute the average of three test scores
-> of equal weight.
+You happen to know that a store has a 25% markup on compact disc (CD) players. If the retail price (what you pay) of a CD player is \$189.98, how much did the store pay for that item (the wholesale price)? In general, what is the wholesale price for any item given its retail price and markup? Analyze the problem and design an algorithm that computes the wholesale price for any given retail price and any given markup. Use this formula and a little algebra to solve for wholesale price: retail price = wholesale price \* (1 + markup).
 
-1B WEIGHTED AVERAGE
+### 1D TIME DIFFERENCES
 
-> Write an algorithm that will compute the course grade using this
-> weighted scale:
-
-  *Assessment*   *Weight*
-  -------------- ----------
-  Quiz average   20%
-  Midterm        20%
-  Lab grade      35%
-  Final exam     25%
-
-1C WHOLESALE COST
-
-> You happen to know that a store has a 25% markup on compact disc (CD)
-> players. If the retail price (what you pay) of a CD player is
-> \$189.98, how much did the store pay for that item (the wholesale
-> price)? In general, what is the wholesale price for any item given its
-> retail price and markup? Analyze the problem and design an algorithm
-> that computes the wholesale price for any given retail price and any
-> given markup. Use this formula and a little algebra to solve for
-> wholesale price: retail price = wholesale price \* (1 + markup).
-
-1D TIME DIFFERENCES
-
-> Write an algorithm that takes two diff erent train departure times
-> (where 0 is midnight, 0700 is 7:00 a.m., 1314 is 14 minutes past 1:00
-> p.m., and 2200 is 10 p.m.) and prints the diff erence between the two
-> times in hours and minutes. Assume both times are on the same date and
-> that both times are valid. For example, 1099 is not a valid time
-> because the last two digits are minutes, which should be in the range
-> of 00 through 59. 2401 is not valid because the hours (the fi rst two
-> digits) must be in the range of 0 through 23 inclusive. For example,
-> if train A departs at 1255 and train B departs at 1305, the diff
-> erence would be 0 hours and 10 minutes.
+Write an algorithm that takes two diff erent train departure times (where 0 is midnight, 0700 is 7:00 a.m., 1314 is 14 minutes past 1:00 p.m., and 2200 is 10 p.m.) and prints the diff erence between the two times in hours and minutes. Assume both times are on the same date and that both times are valid. For example, 1099 is not a valid time because the last two digits are minutes, which should be in the range of 00 through 59. 2401 is not valid because the hours (the fi rst two digits) must be in the range of 0 through 23 inclusive. For example, if train A departs at 1255 and train B departs at 1305, the difference would be 0 hours and 10 minutes.
 
