第一章初稿完成

--- a/translation/01_第一章.md
+++ b/translation/01_第一章.md
@@ -398,66 +398,62 @@ cout << aString.substr(2, 8) << endl;        // sequence
 
 ## 本章小结
 
-This chapter presented a three-step problem-solving strategy of analysis, design, and implementation. The table below shows some of the activities performed during each of these three phases. The maintenance phase has been added to show how the three steps fit into the complete program life cycle. Th e maintenance phase actually requires the majority of the time, energy, and money of the program’s life cycle.
+在一章中，我们介绍了解决问题的分析、设计、实现三步走策略。下面我们用一张表来总结一下该策略的这三个阶段各自要执行的一些动作。除此之外，我们还添加了维护阶段，以补充这个三步走策略，使其成为一个完整的程序生命周期。毕竟，维护阶段的工作事实上占据了程序生命周期中大部分的时间、精力和金钱。
 
+| 阶段任务 | 可执行的动作 |
+|---------|------------|
+| 分析 | 阅读并理解问题的书面说明。<br> 确认要用于输入/输出的对象。<br> 解决几个问题样例。|
+| 设计 | 找出可用于指引算法开发方向的模式。<br>  写出一组解决问题所需要执行的算法步骤。<br>  在具体施行该算法的过程中进一步优化它。|
+| 实现 | 将设计结果转换成编程语言。<br> 修复其中的错误。<br> 创建可执行的程序。<br> 测试该程序。|
+| 维护 | 持续更新该程序，使其与时俱进。<br> 增强该程序。<br> 发现并纠正其中的bug。|
 
+* 我们还介绍了一些用于分析和设计的工具：
+  * 为对象起一个有助于解决问题的名称。
+  * 开发相应的算法。
+  * 优化算法中的一个或多个步骤。
+  * 使用输入/处理/输出模式。
+* 我们还提供了示例程序，当然，我们要到下一章中才会介绍该程序中的许多细节，这里只是让读者了解一下c++中的基本类型和复合类型。
+* 虽然测试很重要，但我们需要明白它不能证明程序中没有错误。当然，测试的确可以检测出部分错误，但这只能在某种程度上建构起我们对程序可行性的信心而已。
 
-| **Phase** | **Activities You Might Perform** |
-|-----------|----------------------------------|
-| Analysis  | Read and understand the problem statement. Determine the input and output objects. Solve a few sample problems.|
-| Design    | Look for patterns to guide algorithm development.<br>  Write an algorithm—steps needed to solve the problem.<br>  Refine the steps in the algorithm and walk through it. |
-| Implementation | Translate the design into a programming language.<br>  Fix errors.<br>  Create an executable program.<br> Test the program. |
-| Maintenance | Update the program to keep up with a changing world.<br> Enhance it.<br> Correct bugs as they are found. |
+## 练习题
 
-* Some analysis and design tools were introduced:
-    * naming the objects that help solve a problem
-    * developing algorithms
-    * refining one or more steps of an algorithm
-    * using the Input/Process/Output pattern
+1. 在分析问题的阶段，我们可以执行哪些动作？
+2. 一个好的算法应该具备哪些特征？
+3. 用于存储输出值的对象与用于存储用户输入值的对象之间有什么差异？
+4. 请列举出三个对象所具有的特征。
+5. 在设计程序的阶段，我们可以执行哪些动作？
+6. 怎样的设计成果是“可交付”的？
+7. 该用什么类型的对象来存储注册某一门课的学生人数？
+8. 该用什么类型的对象来存储π的值？
+9. 该用什么类型的对象来存储一部莎士比亚戏剧的剧本？
+10. 在程序开发中，实现阶段可交付的成果应该是怎样的？
+11. 该如何判断一个程序的运行是否正确？请证明你的判断。
+12. 请编写一个如何回到自己居住地的算法。
+13. 请编写一个可在电话簿中查找任意电话号码的算法。请问该算法始终能成功找到目标吗？
+14. 请编写一个能指引别人步行到你家的算法。
+15. 请设法获取你系统中能用于创建、编译、连接并执行一个C++程序所需的命令，这可能需要你登入自己的系统中，找出那些可用于基本编辑和编译程序的命令。在完成这件事之后，请你编写一个完整的算法，该算法要能指导一个新手完整地编写一个能通过测试的程序，你需要列出该过程中所有必要的步骤，譬如“比对示例输入与程序输出”、“创建新文件”、“编译程序”等。
 
-* The sample program we presented previews the details to be discussed in the next chapter. C++ types were previewed: fundamental and compound.
+## 解决问题：请编写一个算法
 
-* Testing is important, but it does not prove the absence of errors. Testing can and does detect errors, but it can only build confi dence that the program appears to work.
+### 1A 简单平均值
 
-## EXERCISES
+请编写一个算法，计算出三个权重相等的测试成绩的平均值。
 
-1. What activities can be performed when analyzing problems?
-2. What are the characteristics of a good algorithm?
-3. What is the diff erence between objects used to store output values and objects that store the values input by the user?
-4. List the three characteristics of objects.
-5. What activities can be performed when designing programs?
-6. What is one “deliverable” of design?
-7. What type of object would you use to store the number of students registered in a course?
-8. What type of object would you use to store π?
-9. What type of object would you use to store the words of a Shakespeare play?
-10. What is the deliverable from the implementation phase of program development?
-11. Does a program that runs work correctly? Justify your answer.
-12. Write an algorithm that describes how to get to where you live.
-13. Write an algorithm for fi nding any phone number in the phone book. Will the search always be successful?
-14. Write an algorithm that instructs someone to arrive at your home on foot.
-15. Obtain the instructions necessary to create, compile, link, and execute a C++ program on your system. You may need to seek out a login procedure and/or basic editing commands and compiling commands. After this, write a complete algorithm that provides all necessary steps to successfully guide a novice to complete a program through testing. Your algorithm may contain steps such as “Compare example output to program output,” “Create a new file,” and “Compile the program.”
+### 1B 加权平均值
 
-## PROBLEM SOLVING: WRITING ALGORITHMS
+请编写一个能根据一下权重比计算出课程成绩的算法：
 
-### 1A SIMPLE AVERAGE
+| 成绩评估项 | 所占权重 |
+|----------|---------|
+| 小考平均分 | 20%    |
+| 期中考试 | 20%      |
+| 实验成绩 | 35%      |
+| 期末考试 | 25%      |
 
-Write an algorithm that will compute the average of three test scores of equal weight.
+### 1C 批发成本
 
-### 1B WEIGHTED AVERAGE
+假设我们碰巧知道了商家在出售CD播放机时通常要加价25%这个信息。在这种情况下，如果CD播放机的零售价（即我们所支付的价格）是189.98美元，请问该商家进货时支付的价格（即批发价）是多少呢？或者更一般地说，我们会如何根据一个商品的零售价和商家对它的加价计算出该商品的批发价呢？请对该问题进行分析，并设计出一个能根据给定零售价和商家的加价计算出任意商品批发价的算法，你可以使用这个公式来计算批发价：$retailPrice = wholesalePrice × (1 + markup)$。
 
-Write an algorithm that will compute the course grade using this weighted scale:
+### 1D 时间差
 
-| *Assessment* | *Weight* |
-|--------------|----------|
-| Quiz average | 20%      |
-| Midterm      | 20%      |
-| Lab grade    | 35%      |
-| Final exam   | 25%      |
-
-### 1C WHOLESALE COST
-
-You happen to know that a store has a 25% markup on compact disc (CD) players. If the retail price (what you pay) of a CD player is $189.98, how much did the store pay for that item (the wholesale price)? In general, what is the wholesale price for any item given its retail price and markup? Analyze the problem and design an algorithm that computes the wholesale price for any given retail price and any given markup. Use this formula and a little algebra to solve for wholesale price: retail price = wholesale price \* (1 + markup).
-
-### 1D TIME DIFFERENCES
-
-Write an algorithm that takes two different train departure times (where 0 is midnight, 0700 is 7:00 a.m., 1314 is 14 minutes past 1:00 p.m., and 2200 is 10 p.m.) and prints the diff erence between the two times in hours and minutes. Assume both times are on the same date and that both times are valid. For example, 1099 is not a valid time because the last two digits are minutes, which should be in the range of 00 through 59. 2401 is not valid because the hours (the fi rst two digits) must be in the range of 0 through 23 inclusive. For example, if train A departs at 1255 and train B departs at 1305, the difference would be 0 hours and 10 minutes.
+请编写一个算法，使其能记录两列不同火车的出发时间（这里0代表凌晨零点、0700代表上午7:00、1314代表下午1:00后的第14分钟、2200代表的是晚上10点），并以小时加分钟的形式打印出这两个时间的差距。这里我们得假设双方的时间都在同一天，并且都得是有效时间。例如，1099不是一个有效时间，因为其最后两位数字代表的应该是分钟，它的取值范围应该是在00到59之间。同理，2401也不是一个有效时间，因为其前两位数字代表的是小时，它的取值范围必须在00到23之间。总之在这种情况下，如果A列车是在1255出发，而B列车则是在1305出发，那么这两列火车的时间差应该就是0小时十分钟。
