--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -1,40 +1,18 @@
-**C H A P T E R T W O**
-
-C++ Fundamentals
+# 第2章 C++ Fundamentals
 
 SUMMING UP
 
-> Th e fi rst chapter introduced a real-world program development
-> strategy of analysis, design, and implementation. You were encouraged
-> to do some analysis and design before writing C++ code. However, many
-> problems encountered in this textbook will not require much eff ort to
-> analyze and design. Analysis may simply be “Read the problem.” Design
-> might end up as “I can picture an algorithm in my head.”
+The first chapter introduced a real-world program development strategy of analysis, design, and implementation. You were encouraged to do some analysis and design before writing C++ code. However, many problems encountered in this textbook will not require much effort to analyze and design. Analysis may simply be “Read the problem.” Design might end up as “I can picture an algorithm in my head.”
 
 COMING UP
 
-> In this chapter, the emphasis will be on translating algorithms into
-> programs using the C++ programming language. Th e resulting source
-> code you type is the input to the compiler. Th e compiler translates
-> the source code into machine code that your particular computer
-> understands. However, the compiler expects source code to follow the
-> precise rules of the programming language. Understanding how to
-> translate a pseudocode algorithm into its programming language
-> equivalent requires understanding the smallest pieces of a program and
-> how to correctly gather them together to create statements. Th is
-> chapter also examines operations that can be performed on many
-> objects. After studying this chapter, you will be able to
+In this chapter, the emphasis will be on translating algorithms into programs using the C++ programming language. Th e resulting source code you type is the input to the compiler. Th e compiler translates the source code into machine code that your particular computer understands. However, the compiler expects source code to follow the precise rules of the programming language. Understanding how to translate a pseudocode algorithm into its programming language equivalent requires understanding the smallest pieces of a program and how to correctly gather them together to create statements. This chapter also examines operations that can be performed on many objects. After studying this chapter, you will be able to
 
--   understand how to include existing source code in your programs
-
--   obtain data from the user and display information to the user
-
--   evaluate and create arithmetic expressions
-
--   understand that these common operations are available to many
-    > objects such as initialization, input, assignment, and output
-
--   solve problems using the C++ programming language
+* understand how to include existing source code in your programs
+* obtain data from the user and display information to the user
+* evaluate and create arithmetic expressions
+* understand that these common operations are available to many objects such as initialization, input, assignment, and output
+* solve problems using the C++ programming language
 
 2.1 THE PIECES OF A C++ PROGRAM
 
