--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -199,30 +199,31 @@ int main() {
 
 在本书所涉及的这些程序中，我们对单行注释通常会采用`// Comment`而不是`/* Comment */`。原因是`/*`之后一直到`*/`之前的所有代码都会被视为一段注释，只要我们不慎忘记了在注释结尾加上一个`*/`，就会意外地让一大段代码变成注释。而单行注释就很难造成这种大段代码变成注释的情况。
 
-请记住，我们添加注释的目的是为了澄清和记录源代码的用途，以便让程序更容易被理解，更容易被调试（纠正错误）以及更易于维护（并在必要时做些修改）。很多时候，程序员们需要依靠这些注释来理解一些几天前、几周前、几个月前、几年前乃至于几十年前写的程序。
+这里需要提醒的是，我们添加注释的目的是为了澄清和记录源代码的用途，以便让程序更容易被理解，更容易被调试（纠正错误）以及更易于维护（并在必要时做些修改）。很多时候，程序员们需要依靠这些注释来理解一些几天前、几周前、几个月前、几年前乃至于几十年前写的程序。
 
 ### 2.1.6 C++字面常量
 
-The C++ compiler recognizes string, integer, Boolean (true/false), and floating-point literals. A *string literal* is zero or more characters enclosed within double quotes and finished on the same line:
+C++编译器可以自行识别字符串类型、整数类型、布尔类型（`true`/`false`）和浮点类型的字面常量。其中，*字符串类型常量*是由双引号括起来的0个或多个字符，并且所有字符都必须在同一行以内。
 
 ```shell
 "Double quotes are used to delimit string constants."
 "Hello, World!"
 ```
 
-*Integer constants* are numbers without decimal points. *Floating-point constants* are written with decimal points or using exponential notation: 5e3 = 5 \* 103 = 5000.0 and 1.23e-4 = 1.23 \* 10^-4^ = 0.000123, for example. *Boolean literals* are true and false. Here are some examples of C++ literals and the C++ types used in this textbook to store those literal objects.
+除此之外，*整数类型常量*是不带小数点的数字，*浮点数类型常量*是用小数点或科学计数法书写的常量(例如$5e3 = 5 * 10^3 = 5000.0$和$1.23e-4 = 1.23 * 10^{-4} = 0.000123$)，*布尔类型常量*即`true`和`false`。下面这些C++类型及其相应的常量示例是我们在本书会经常用到的常量对象。
 
-| Type | Example Literals |
+| 类型 | 常量示例 |
 |------|------------------|
-| int  | 0 1 999 -999 -2147483647 2147483647 |
-| char | 'a' '\#' '9' '\\t' (tab) '\\n' (new line) |
-| double | 1.23 0.5 .5 5. 2.3456e9 1e-12 |
-| bool | true false |
-| string | "Double quoted" "Kim's" "\\n" "" (empty string) |
+| `int`  | `0` `1` `999` `-999` `-2147483647` `2147483647` |
+| `char` | `'a'` `'#'` `'9'` `'\t'`（制表符） `'\n'`（换行符）|
+| `double` | `1.23` `0.5` `.5` `5.` `2.3456e9` `1e-12` |
+| `bool` | `true false` |
+| `string `| `"Double quoted"` `"Kim's"` `"\n"` `""`（空字符串）|
 
 ```C++
 // Print a few C++ literals
-#include <iostream>  // For cout and endl using namespace std;
+#include <iostream>  // For cout and endl
+using namespace std;
 
 int main() {
     cout << 123 << endl;
@@ -236,22 +237,22 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 123
-a m
+a   m
 1.23
 1 and 0
-Hello world
+Hello
+ world
 ```
 
-**SELF-CHECK**
+**自检题**
 
-2-1 How many special symbols are there in the preceding program?
+2-1 在前面的程序中，我们使用了多少特殊符号？
 
-2-2 List each of the following as a valid identifi er or explain why it
-is not valid.
+2-2 请列出下面的有效标识符，并解释其余标识符无效的原因。
 | | |
 |-|-|
 | `a.  abc`  | `l.  H.P.` |
@@ -266,41 +267,43 @@ is not valid.
 | `j.  Double`     | `u.  os` |
 | `k.  mispellted` | |
 
-2-3. List two special symbols that are one character long.
+2-3. 请列举出两个单字符的特殊符号。
 
-2-4.  List two special symbols that are two characters long.
+2-4. 请列举出两个双字符的特殊符号。
 
-2-5.  List two standard identifiers.
+2-5.  请列举出两个属于标准库的标识符。
 
-2-6.  Create two programmer-defined identifiers.
+2-6.  请创建两个由程序员定义的标识符。
 
-2-7.  Given the following tokens:
+2-7.  对于以下标记：
 
-'\\n' false 234 1.0 'H' "'" -123 1.0e+03 "H" true
+`'\n'` `false` `234` `1.0` `'H'` `"'"` `-123` `1.0e+03` `"H"` `true`
 
-a. Which are valid string literals?
+a. 哪些属于有效的字符串类型常量？
 
-b. Which are valid integer literals?
+b. 哪些属于有效的整数类型常量？
 
-c. Which are valid fl oating-point literals?
+c. 哪些属于有效的浮点数类型常量？
 
-d. Which are valid Boolean literals?
+d. 哪些属于有效的布尔类型常量？
 
-e. Which are valid char literals?
+e. 哪些属于有效的字符类型常量？
 
-2-8. Which of the following are valid C++ comments?
+2-8. 以下哪些属于有效的C++注释？
 
-a.  // Is this a comment?
+a.  `// Is this a comment?`
 
-b.  / / Is this a comment?
+b.  `/ / Is this a comment?`
 
-c.  /\* Is this a comment?
+c.  `/* Is this a comment?`
 
-d.  /\* Is this a comment? \*/
+d.  `/* Is this a comment? */`
 
-## 2.2 STATEMENTS
+## 2.2 语句
 
 A *declaration* introduces one or more object names into a program. An *initialization* also introduces object names into a program with the additional feature of setting the initial *value* to whatever the programmer wants. Th ese variable names are used later when the programmer is interested in the current value or needs to change that value. Here are the general forms for declaring or initializing fundamental and compound types of variables:
+
+*声明（declaration）*的作用是将一个或多个对象名称引入到程序中，而*初始化（initialization）*的作用除了将对象名称引入到程序中的之外，还能按照程序员意图为该对象设置一个初始*值*。
 
 **General Form 2.3** *Declaration (some classes have a default initial state)*
 
