--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -24,7 +24,7 @@
 2. 以*倾斜字体*呈现的这部分通用格式将必须由程序员来负责提供具体内容，譬如*expression*表示程序员须在该处提供一个有效的表达式。
 3. 以倾斜字体呈现的实体项代表它在别的地方已被定义。
 
-**通用格式2.1**：*标准C++程序*
+**通用格式 2.1**：*标准C++程序*
 
 ```C++
 // A comment
@@ -70,7 +70,7 @@ Hello Casey, I hope you’re feeling well.
 
 每个C++程序通常都会用到一两个以上的由其他程序员所提供的源码文件。事实上，C++编译器本身就提供了大量的源码文件。下面，我们就来看看将其他文件中的源码加入到自己程序中的通用格式：
 
-**通用格式2.2**：*`#include`指令*
+**通用格式 2.2**：*`#include`指令*
 
 `#include` <*include-file*>
 
@@ -301,21 +301,19 @@ d.  `/* Is this a comment? */`
 
 ## 2.2 语句
 
-A *declaration* introduces one or more object names into a program. An *initialization* also introduces object names into a program with the additional feature of setting the initial *value* to whatever the programmer wants. Th ese variable names are used later when the programmer is interested in the current value or needs to change that value. Here are the general forms for declaring or initializing fundamental and compound types of variables:
+*声明（declaration）*的作用是将一个或多个对象的名称引入到程序中，而*初始化（initialization）*的作用除了将对象的名称引入到程序中的之外，还附带着会按照程序员意图为该对象设置一个初始*值*。而程序员们会在之后对它们的当前值有兴趣或者需要修改那些值时使用到这些变量名。下面我们就来看看声明或初始化一个基本类型和复合类型变量的通用格式：
 
-*声明（declaration）*的作用是将一个或多个对象名称引入到程序中，而*初始化（initialization）*的作用除了将对象名称引入到程序中的之外，还能按照程序员意图为该对象设置一个初始*值*。
+**通用格式 2.3**：*声明（某些类型自身会具有一个默认初始化状态）*
 
-**General Form 2.3** *Declaration (some classes have a default initial state)*
+> *type identier* ;
 
-*type identier* ;
+**通用格式 2.4**：*初始化（声明一个变量并赋予它一个值）*
 
-**General Form 2.4** *Initialization (declare a variable and assign it a value)*
+> *type identier* = *initial-state* ;
 
-*type identi er* = *initial-state* ;
+这里的*type*可以是一个浮点数类型`double`，也可以是一个像`string这样的用于存储一组字符的复合类型（事实上，现有的其他复合类型还有很多）。
 
-The type may be double—to store numbers with a decimal point—or a compound type class such as string to store a collection of characters (many other compound types exist).
-
-The following code declares some variables and initializes others. The semicolons (;) are used to terminate statements.
+在下面的代码中，我们声明了一些变量。也初始化了一些变量。请注意，每一条语句都要以分号（`;`）结尾。
 
 ```C++
 int credits; // credits is some random integer
@@ -323,35 +321,35 @@ double points; // > credits is some random oating point number
 double GPA = 0.0; // GPA is initialized to 0.0
 bool boolOne; // boolOne could be either true or false
 bool boolTwo = true; // boolOne is true
-string rstName; // rstName is the empty string ""
+string firstName; // firstName is the empty string ""
 string middleName = "James"; // middleName.length() is 5
 string lastName = "Potter"; // lastName.length() is 6
 ```
 
-The fundamental types int, double, and bool diff er from string and other compound types in several ways. When declared, numeric types have an unknown value. However, the default initial value of string objects is the empty string "" when it is not explicitly initialized.
+这里需要指出的是，`int`、`double`、`bool`这些基本类型在行为上与`string`其他复合类型之间有着若干的不同之处。数字类型在被声明时，它们的初始值通常是未知的，而`string`对象在没有被显式初始化的情况下也会有一个空字符串`“”`来充当其默认的初始值。
 
-The following table summarizes the initial state of these objects where some have an unknown state. Th ose variables were declared, but not initialized. Th e value is whatever bits happen to be there when the program runs. Th ese variables can actually have diff erent value during diff erent program runs.
+下面这张表总结了上述对象的初始状态，如你所见，其中有些对象属于未知状态。这些变量被声明了，但未被初始化。它们的值事实上就是该程序运行时其所在内存中的内容。这也就是说，这些变量在不同的程序运行期间会有不同的值。
 
-| Variable | Name Object’s State |
-|----------|---------------------|
-| credits | unknown |
-| points | unknown |
-| boolOne | unknown |
-| boolTwo | true (would print as 1) |
-| GPA | 0.0 |
-| fistName  | "" |
-| middleName | "James" |
-| lastName   | "Potter" |
+| 变量名称 | 对象状态 |
+|----------|--------|
+| `credits` | 未知 |
+| `points` | 未知 |
+| `boolOne` | 未知 |
+| `boolTwo` | `true`（可能还会打印出1）|
+| `GPA` | `0.0` |
+| `fistName`  | `""` |
+| `middleName` | `"James"` |
+| `lastName`   | `"Potter"` |
 
-### 2.2.1 OUTPUT WITH cout
+### 2.2.1 `cout`输出
 
-Programs communicate with users. Such communication is provided through, but not limited to, keyboard input and screen output. This two-way communication is a critical component of many of the programming projects in this textbook.
+程序与其用户之间的通信，通常是通过键盘输入和屏幕输出来完成的。虽说并不只局限于这两种方式，但在本书中，它们是我们许多编程项目的关键组成部分。
 
-**General Form 2.5** *The* cout *statement*
+**通用格式 2.5**： *`cout`语句*
 
-> cout &lt;&lt; *expression-1* &lt;&lt; *expression-2* , . . . ,&lt;&lt; *expression-n* &lt;&lt; endl;
+> `cout <<` *expression-1* `<<` *expression-2* , . . . ,`<<` *expression-n* `<< endl`;
 
-The object named cout (pronounced “see-out” and short for **c**ommon **out**put) represents where the output will go: the console. *expression-1* through *expression-n* may take the form of object names such as GPA and rstName or constants such as "Credits: " and 99.5. Th e output operator &lt;&lt; indicates the direction in which data are fl owing. Finally, a semicolon (;) terminates each statement. Here are some legal output statements that use the endl identifier (pronounced “end-ell”) to generate a new line:
+在这里，对象名`cout`（读作“see-out”，是**c**ommon **out**put这个名称的简写形式）表示我们将把信息输出到控制台中。然后，从*expression-1*到*expression-n*这部分格式具体既可以是`GPA`和`firstName`这样的对象名称，也可以是`"Credits: "`和`99.5`这样的常量。接下来是操作符`<<`，它代表了数据流动的方向。最后，每一条语句都要以一个分号（`;`）结尾。下面，我们来看一些使用了`endl`这个标识符（读作“end-ell”)的合法输出语句，如你所见，该标识符的作用是换行。
 
 ```C++
 cout << 99.5 << endl;
@@ -360,27 +358,27 @@ cout << "First Name: " << firstName << endl;
 cout << "Credits: " << credits << endl;
 ```
 
-When a cout statement is encountered, the expressions are inserted into a data stream going toward the computer screen. Th e expressions are output in the same order as they are encountered in the statement—in a left-to-right order. When the expression endl is encountered, a new line is generated, so any subsequent output starts at the beginning of a new line.
+当一条`cout`语句被执行时，其相关的表达式就被插入到了一条导向计算机屏幕的数据流中。这些表达式的输出顺序与它们在语句中出现的顺序是相同的，也就是从左向右的顺序。当它们遇到`endl`这个表达式时，就会另起一行，因此后续的输出会从新的一行开始。
 
 ```C++
 cout << 'A' << " line " << true << " " << 123 << 4.56 << endl;
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 A line 1 1234.56
 ```
 
-**SELF-CHECK**
+**自检题**
 
-2-9 Initialize two objects that represent numbers with an initial value of -1.5.
+2-9 请初始化两个用来表示数字的对象，并将它们的初始值设为-1.5。
 
-2-10 Declare one object named address that could store a street address.
+2-10 请声明一个可以用来表示某一条街道地址的对象，并将其命名为`address`。
 
-2-11 Write a complete C++ program that displays any names you have on separate lines.
+2-11 请编写一个完整的C++程序，用它来逐行显示你在程序中用过的所有名称。
 
-### 2.2.2 ASSIGNMENT AND TYPE CONVERSIONS
+### 2.2.2 赋值与类型转换
 
 *Assignment* statements set the state of an object. Th e value of the expression to the right of = replaces whatever value was in the object to the left of =.
 
