算术表达式

--- a/translation/02_第二章.md
+++ b/translation/02_第二章.md
@@ -464,9 +464,9 @@ cin >> credits;       // User must input a number
 
 这里的*object-name*必须是一个可接受键盘输入值的类实体。这本书中的许多对象定义（当然，不是所有）采用的就是这种形式，我问问会用`cin`输入来定义`int`、`double`、`string`这些类型的对象。
 
-When a cin statement is encountered, the program pauses until the user types the proper input value and presses the Enter key. If everything goes okay, the value typed by the user is converted into the proper machine representation and stored as the state of that object.
+当一条`cin`语句被执行时，程序就会暂停执行，等用户输入完相关的值并按下回车键之后再继续。如果一切顺利的话，这些被输入的值将会被转换成相对应的机器形态，并被存储为相关对象的状态。
 
-In addition to the Enter key, input data is also separated by one or more blank spaces. Th is makes it difficult to read in a string with blank spaces, such as a person’s full name or address. Given the following code:
+除了回车键之外，被输入数据也会被一个或多个空格符分隔开来。这就会让程序在读取带空格符的字符串时遇到一些麻烦，譬如说，对于一个人全名和地址，我们通常会这样编写代码：
 
 ```C++
 string name;
@@ -474,19 +474,19 @@ cout << "Enter your name: ";
 cin >> name;
 ```
 
-and this dialogue:
+然后我们会与该程序进行如下会话：
 
 ```shell
-Enter your name: Kim McPhee
+Enter your name: ***Kim McPhee***
 ```
 
-Kim is stored into name, not Kim McPhee as one would hope. The blank space after Kim terminates the input value. To get all characters from one line even with spaces, use the getline operation:
+这时候被存入`name`的是`Kim`，而不是我们所期望的`Kim McPhee`。`Kim`后面的空格符终止了这一次的输入内容。所以，如果我们想读取一行中所有的字符（包括空格符），这里需要执行的是`getline`操作：
 
 ```C++
 getline(cin, name);
 ```
 
-You may write the cin statement with more than one object for input. If you do, you must assume that the user knows to separate each input from the preceding one with a blank space (press the Spacebar), a new line (press Enter or Return), or a tab (press the Tab key). The following program was run several times to show the various ways input is separated.
+我们也可以编写可依次输入多个对象的`cin`语句。当然，在这样做的时候，我们必须要假设用户知道如何用空格符（敲空格键）、换行符（敲回车键）或制表符（敲`TAB`键）将这些对象分隔开。下面我们来演示一下各种分隔输入数据的方式：
 
 ```C++
 #include <iostream>
@@ -506,7 +506,7 @@ int main() {
 }
 ```
 
-**Three Possible Dialogues**
+**以下是该程序三种可能的会话过程：**
 
 | Enter four integers:  | Enter four integers: | Enter four integers: ***1*** |
 |-----------------------|----------------------|------------------------------|
@@ -520,42 +520,44 @@ int main() {
 |                       | 3                    |                              |
 |                       | 4                    |                              |
 
-A simple alternative would be to use one cin statement for each input.
+让这件事简单化的替代方案就是为每一次输入单独写一条`cin`语句。
 
-## 2.3 ARITHMETIC EXPRESSIONS
+## 2.3 算术表达式
 
-Many of the problems in this chapter require you to write arithmetic expressions. Arithmetic expressions are made up of two components: operators and operands. An arithmetic *operator* is one of the C++ special symbols +, -, /, or \*. The *operands* of an arithmetic expression may be a numeric object name such as test1 or a numeric constant such as 0.25. Assuming x is an instance of the double class, the following expression has operands x and 4.5. The operator is +.
+本章的许多问题事实上都是在让我们编写算术表达式。算术表达式通常由运算符和操作数两部分组成。其中，*运算符*通常指的就是C++那些特殊符号`+`、`-`、`/`、`*`中的某一个。而*操作数*既可以是像之前`test1`这样的数字类型对象，也可以是像`0.25`这样的数字常量。下面我们假设x是一个`double`类型的实体，那么在以下表达式的操作数就是`x`和`0.25`，运算符就是`+`。
 
     x + 4.5
 
-Together, the operator and operands determine the value of the arithmetic expression.
+运算符和操作数将共同决定该算术表达式的值。
 
-The simplest arithmetic expression is a numeric constant or numeric object name. Arithmetic expressions may also have two operands with one operator (see the table below).
+算术表达式最简单的形式就单纯一个数字常量或数字类型的对象名，不过它也可以是两个操作数加一个运算符的形式（如下表所示）：
 
-| An Arithmetic Expression May Be | Example |
-|---------------------------------|---------|
-| *Numeric object*                | x       |
-| *Numeric constant*              | 100 *or* 99.5 |
-| *Expression* + *expression*     | x + 2.0 |
-| *Expression* - *expression*     | x - 2.0 |
-| *Expression* \* *expression*    | x \* 2.0 |
-| *Expression* / *expression*     | x / 2.0 |
-| ( *Expression* )                | (x + 2.0) |
+| 算术表达式的形式       | 具体示例 |
+|---------------------|---------|
+| *数字类型对象*        | `x`     |
+| *数字类型常量*  | `100`或`99.5` |
+| *表达式* + *表达式* | `x + 2.0` |
+| *表达式* - *表达式* | `x - 2.0` |
+| *表达式* * *表达式* | `x * 2.0` |
+| *表达式* / *表达式* | `x / 2.0` |
+| ( *表达式* )     | `(x + 2.0)` |
 
-The previous definition of expression also suggests that more complex arithmetic expressions are possible, such as this:
+上面定义的这些表达式还可以有更复杂的算术表达式，例如：
 
 ```C++
 1.5 * ((x - 99.5) * 1.0 / x)
 ```
 
-Since arithmetic expressions may be written with many constants, numeric object names, and operators, rules are put into force to allow a consistent evaluation of expressions. The following table lists the fi ve C++ arithmetic operators and the order in which they are applied to numeric objects.
+Since arithmetic expressions may be written with many constants, numeric object names, and operators, rules are put into force to allow a consistent evaluation of expressions. The following table lists the five C++ arithmetic operators and the order in which they are applied to numeric objects.
+
+由于我们在编写算术表达式时可以使用多个常量、数字类型对象的名称和运算符，所以必须得有切实可行的规则来对这些表达执行一般性的求值操作。下表中列出了五个C++算术运算符，和他们作用在数字类型对象上的优先顺序。
 
 **Binary Arithmetic Operators**
 
 | Operators | Precedence Rule |
 |-----------|-----------------|
-| \* / %  | In the absence of parentheses, multiplication, division, and remainder (%), operators evaluate before addition and subtraction. In other words, \*, /, and % (for the int remainder) have precedence over + and -. If more than one of these operators appear in an expression, the leftmost operator evaluates first. |
-| > + - | In the absence of parentheses, + and - evaluate after all \*, /, and % operators, with the leftmost evaluating first. Parentheses may override these precedence rules.|
+| * / %     | In the absence of parentheses, multiplication, division, and remainder (%), operators evaluate before addition and subtraction. In other words, *, /, and % (for the int remainder) have precedence over + and -. If more than one of these operators appear in an expression, the leftmost operator evaluates first. |
+| > + -     | In the absence of parentheses, + and - evaluate after all *, /, and % operators, with the leftmost evaluating first. Parentheses may override these precedence rules.|
 
 The operators of the following expression are applied to the operands in this order: /, +, and lastly -.
 
@@ -566,7 +568,7 @@ The operators of the following expression are applied to the operands in this or
 Parentheses may alter the order in which arithmetic operators are applied to their operands.
 
 ```C++
-(2.0 + 5.0 - 8.0) / 4.0 // Evaluates to -0.25
+(2.0 + 5.0 - 8.0) / 4.0;    // Evaluates to -0.25
 ```
 
 With parentheses, the / operator evaluates last, rather than first.
@@ -604,10 +606,12 @@ double x = 2.5;
 double y = 3.0;
 ```
 
-  a\. x \* y + 3.0       d\. 1.5 \* (x - y)
-  ---------------------- -------------------------
-  b\. 0.5 + x / 2.0      e\. y + -x
-  c\. 1 + x \* 3.0 / y   f\. ( x - 2) \* (y - 1)
+* a.  x * y + 3.0
+* b.  0.5 + x / 2.0
+* c.  1 + x * 3.0 / y
+* d.  1.5 * (x - y)
+* e.  y + -x
+* f.  ( x - 2) * (y - 1)
 
 ### 2.3.1 int ARITHMETIC
 
